# tattara

./: .gitignore  README.md  api-specs.yaml  commitlint.config.mjs  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
.husky/: pre-commit
backend/: README.md
backend/ai/: .dockerignore  Dockerfile  README.md  demo_form.json  ocr_test.py  pyproject.toml  requirements.txt  verify_pick.py
backend/ai/app/: config.py  main.py  models.py  schemas.py
backend/ai/app/services/: __init__.py  extraction_router.py  metrics.py  spitch_service.py  translation_service.py  utils.py  validator.py  vision_service.py  whisper_service.py
backend/ai/app/services/providers/: groq_provider.py  openai_provider.py
backend/ai/app/utils/: prompting.py  schema.py
backend/ai/files/: Dental Health.m4a  Ed Triage.m4a  Maternal Health Yoruba.m4a  Patient_consultation.m4a  Patient_registration.m4a  Vaccination_record.m4a  malaria_case.m4a
backend/ai/tattara_ai_bakend.egg-info/: PKG-INFO  SOURCES.txt
backend/ai/tests/: Spitch_Multilingual_ASR_Test.ipynb
database/: README.md
deployment/: .dockerignore  README.md  deploy.sh  docker-compose.action.yml  docker-compose.build.yml  docker-compose.yml
dhis2-integration/: README.md
docker/: .dockerignore  Dockerfile  docker-compose copy.yml  docker-compose.prod.yml  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DNS_AND_SSL_SETUP.md  DYNAMIC_CONFIG_SUMMARY.md  EXAMPLE_DEPLOYMENTS.md  KPIS_AND_RISKS.md  MILESTONES.md  QUICK_REFERENCE.md  USER_STORIES.md
frontend/: .dockerignore  .env.example  Dockerfile  (+10 more)
(+421 files in other folders)
